--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "aws-amplify": "^5.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "uuid": "^9.0.0",
+    "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
